# vector_compression

./: CMakeLists.txt  README.md  package.xml
include/vector_compression/: vector_compression.h
src/: vector_compression.cpp
tests/: test_vector_compression.cpp
